# NLPProject

./: .gitignore  README.md  featurizer.py  featurizer_test.py  graph.py  graph_initializer.py  graph_initializer_test.py  model_factory.py  models_test.py  notes_intro_to_gnns.ipynb  pyproject.toml  sentiment_analysis.py  ud_graph_notes.ipynb
NLPProject/: graph.py  model.py  ud_graph_notes.ipynb
models/: sentiment_analysis_model.py
notes/: amr_graph_notes.ipynb  notes_intro_to_gnns.ipynb  ud_graph_notes.ipynb
runs/: run_0.json  run_1.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json
scripts/: make_env.sh  run_script.sh
src/: main.py  main_set_args.py  output.csv  saved_state_manager.py
src/NLPProject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nlp_core/: app_manager.py  data_pipeline.py  executor.py  main.py  saved_state_manager.py
src/nlp_core/graphs/: build_graph_strategies.py  graph_builder.py  graph_builder_factory.py  parse_text_strategies.py
src/nlp_core/models/: model_factory.py
src/package/: app_manager.py  build_graph_strategies.py  data_pipeline.py  executor.py  featurizer.py  featurizer_decorator.py  graph.py  graph_initializer.py  model.py  model_factory.py  sentiment_analysis.py
src/package/features/: featurizer.py  featurizer_decorator.py
tests/: build_graph_strategies_test.py  conftest.py  data_pipeline_test.py  executor_test.py  featurizer_test.py  gettysburg.txt  graph_builder_test.py  graph_initializer_test.py  parse_text_strategies_test.py  sentiment_analysis_test.py
(+8 files in other folders)
