[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NLPProject"
version = "0.1.0"
description = "NLP Project"
authors = [
  { name="Jeremy Miesch" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pandas",
  "torch",
  "torch_geometric",
  "stanza",
  "gensim",
  "scikit-learn",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]