[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NLPProject"
version = "0.1.0"
description = "NLP Project"
authors = [
  { name="Jeremy Miesch" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "amrlib==0.8.1",
  "gensim==4.4.0",
  "kagglehub==1.0.1",
  "nltk==3.9.4",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "penman==1.3.1",
  "scikit_learn==1.8.0",
  "stanza==1.11.1",
  "torch==2.6.0",
  "torch_geometric==2.7.0",
  "tqdm==4.67.3"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]